[package]
name = "blast-cli"
version = "0.1.0"
edition = "2021"
authors = ["Blast Contributors"]
description = "Command-line interface for the Blast Python environment manager"
license = "MIT"

[dependencies]
# Internal dependencies
blast-core = { path = "../blast-core" }
blast-daemon = { path = "../blast-daemon" }
blast-image = { path = "../blast-image" }
blast-resolver = { path = "../blast-resolver" }

# CLI
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = { workspace = true } 