[package]
name = "blast-core"
version = "0.1.0"
edition = "2021"
authors = ["Blast Contributors"]
description = "Core types and traits for the Blast Python environment manager"
license = "MIT"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:toml"]

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Version handling
semver = { version = "1.0", features = ["serde"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "5.0"
glob = "0.3"

# Pattern matching
regex = "1.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
